[package]
name = "getting-started"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
